--- a/config/services.yml
+++ b/config/services.yml
@@ -3,32 +3,32 @@ services:
   _defaults:
     public: true
 
-  extalion.modulename.command.foo:
-    class: Extalion\ModuleName\Command\FooCommand
+  extalion.sentry.command.foo:
+    class: Extalion\Sentry\Command\FooCommand
     arguments:
       - '@translator'
       - '@prestashop.adapter.legacy_context_loader'
     tags:
       - { name: 'console.command' }
 
-  extalion.modulename.repository.configuration:
-    class: Extalion\ModuleName\Repository\Configuration
+  extalion.sentry.repository.configuration:
+    class: Extalion\Sentry\Repository\Configuration
     factory: ['@doctrine.orm.default_entity_manager', getRepository]
     arguments:
-      - Extalion\ModuleName\Entity\ExtmodulenameConfiguration
+      - Extalion\Sentry\Entity\ExtsentryConfiguration
 
-  extalion.modulename.service.foo:
-    class: Extalion\ModuleName\Service\Foo
+  extalion.sentry.service.foo:
+    class: Extalion\Sentry\Service\Foo
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
       - '@=service("prestashop.adapter.legacy.context").getContext().shop.id'
       - '@prestashop.adapter.data_provider.module'
       - '@prestashop.adapter.legacy.configuration'
-      - '@extalion.modulename.repository.configuration'
+      - '@extalion.sentry.repository.configuration'
     calls:
       - { method: setTranslator, arguments: ['@translator'] }
 
-  Extalion\ModuleName\Controller\Admin\ModuleNameController:
-    class: Extalion\ModuleName\Controller\Admin\ModuleNameController
+  Extalion\Sentry\Controller\Admin\SentryController:
+    class: Extalion\Sentry\Controller\Admin\SentryController
     arguments:
-      - '@extalion.modulename.service.foo'
+      - '@extalion.sentry.service.foo'
